tests/test-invalid-js.js.expected
test-invalid-js.js:3
std.logBlaaaah('foo');
    ^
TypeError: std.logBlaaaah is not a function
    at test-invalid-js.js:3:5
