tests/test-invalid-js.js
import std from 'std';

std.logBlaaaah('foo');
